Klassindelning, autoamount, guaranteed roles
Bugfixes, autoamount on/off functions

--- a/app/src/main/res/layout/fragment_event_view.xml
+++ b/app/src/main/res/layout/fragment_event_view.xml
@@ -654,7 +654,7 @@
         <LinearLayout
             android:id="@+id/bottom_panel"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:background="@color/background_green_light"
             android:gravity="center"
             android:orientation="horizontal"
