--- a/app/src/main/res/layout/fragment_event_view.xml
+++ b/app/src/main/res/layout/fragment_event_view.xml
@@ -16,6 +16,79 @@
         android:padding="10dp"
         tools:context=".EventView">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        android:id="@+id/ev_noConnection"
+        android:gravity="center"
+        android:background="@color/black"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Connection Problems"
+            android:textColor="#FFFF00"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        android:id="@+id/devModeLayout">
+        <Button
+            android:id="@+id/fullReset"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:backgroundTint="#FFFFFF"
+            android:text="Full Reset"
+            android:textColor="#000000"
+            app:strokeColor="#000000"
+            app:strokeWidth="2dp" />
+        <Button
+            android:id="@+id/checkinAll"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:backgroundTint="#FFFFFF"
+            android:text="Checkin all"
+            android:textColor="#000000"
+            app:strokeColor="#000000"
+            app:strokeWidth="2dp" />
+        <Button
+            android:id="@+id/resetToCheckin"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:backgroundTint="#FFFFFF"
+            android:text="Reset to checkin"
+            android:textColor="#000000"
+            app:strokeColor="#000000"
+            app:strokeWidth="2dp" />
+        <Button
+            android:id="@+id/resetRoles"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:backgroundTint="#FFFFFF"
+            android:text="Reset Roles"
+            android:textColor="#000000"
+            app:strokeColor="#000000"
+            app:strokeWidth="2dp" />
+    </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -729,13 +802,14 @@
 
             <TextView
                 android:id="@+id/gameEndText"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="30dp"
+                android:layout_weight="1"
                 android:text="Game Ended"
                 android:textSize="24dp"
                 android:textStyle="bold"
-                android:visibility="gone" />
+                android:visibility="gone"
+                android:textAlignment="center"/>
 
             <RelativeLayout
                 android:layout_width="0dp"
