--- a/app/src/main/res/layout/fragment_level_up.xml
+++ b/app/src/main/res/layout/fragment_level_up.xml
@@ -249,9 +249,9 @@
                     android:id="@+id/level_1_button"
                     android:layout_width="215dp"
                     android:layout_height="110dp"
-                    android:scaleType="fitXY"
                     android:backgroundTint="#000000"
                     android:contentDescription="button"
+                    android:scaleType="fitXY"
                     android:src="@drawable/h1"
                     tools:ignore="SpeakableTextPresentCheck" />
 
@@ -272,9 +272,9 @@
                     android:id="@+id/level_2_button"
                     android:layout_width="215dp"
                     android:layout_height="110dp"
-                    android:scaleType="fitXY"
                     android:backgroundTint="#000000"
                     android:contentDescription="button"
+                    android:scaleType="fitXY"
                     android:src="@drawable/h2"
                     tools:ignore="SpeakableTextPresentCheck" />
 
@@ -295,9 +295,9 @@
                     android:id="@+id/level_3_button"
                     android:layout_width="215dp"
                     android:layout_height="110dp"
-                    android:scaleType="fitXY"
                     android:backgroundTint="#000000"
                     android:contentDescription="button"
+                    android:scaleType="fitXY"
                     android:src="@drawable/h3"
                     tools:ignore="SpeakableTextPresentCheck" />
 
@@ -332,9 +332,9 @@
                             android:id="@+id/ultimate_A_button"
                             android:layout_width="128dp"
                             android:layout_height="190dp"
-                            android:scaleType="fitXY"
                             android:backgroundTint="#000000"
                             android:contentDescription="button"
+                            android:scaleType="fitXY"
                             android:src="@drawable/h4a"
                             tools:ignore="SpeakableTextPresentCheck" />
 
@@ -363,9 +363,9 @@
                             android:id="@+id/ultimate_B_button"
                             android:layout_width="128dp"
                             android:layout_height="190dp"
-                            android:scaleType="fitXY"
                             android:backgroundTint="#000000"
                             android:contentDescription="button"
+                            android:scaleType="fitXY"
                             android:src="@drawable/h4b"
                             tools:ignore="SpeakableTextPresentCheck" />
 
@@ -396,11 +396,12 @@
 
                 <ImageButton
                     android:id="@+id/warrior1button"
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
-                    android:backgroundTint="#FFFFFF"
+                    android:layout_width="128dp"
+                    android:layout_height="190dp"
+                    android:backgroundTint="#000000"
                     android:contentDescription="button"
-                    android:src="@mipmap/ic_tiger_foreground"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ws"
                     tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
@@ -432,12 +433,12 @@
 
                         <ImageButton
                             android:id="@+id/warrior2button"
-                            android:layout_width="110dp"
-                            android:layout_height="110dp"
-                            android:backgroundTint="#FFFFFF"
+                            android:layout_width="128dp"
+                            android:layout_height="190dp"
+                            android:backgroundTint="#000000"
                             android:contentDescription="button"
-                            android:src="@mipmap/ic_tiger_foreground"
-                            tools:ignore="SpeakableTextPresentCheck" />
+                            android:scaleType="fitXY"
+                            android:src="@drawable/wh" />
 
                         <TextView
                             android:id="@+id/warrior2exp"
@@ -454,12 +455,12 @@
 
                         <ImageButton
                             android:id="@+id/warrior4button"
-                            android:layout_width="110dp"
-                            android:layout_height="110dp"
-                            android:backgroundTint="#FFFFFF"
+                            android:layout_width="128dp"
+                            android:layout_height="190dp"
+                            android:backgroundTint="#000000"
                             android:contentDescription="button"
-                            android:src="@mipmap/ic_tiger_foreground"
-                            tools:ignore="SpeakableTextPresentCheck" />
+                            android:scaleType="fitXY"
+                            android:src="@drawable/wr" />
 
                         <TextView
                             android:id="@+id/warrior4exp"
@@ -484,12 +485,12 @@
 
                         <ImageButton
                             android:id="@+id/warrior3button"
-                            android:layout_width="110dp"
-                            android:layout_height="110dp"
-                            android:backgroundTint="#FFFFFF"
+                            android:layout_width="128dp"
+                            android:layout_height="190dp"
+                            android:backgroundTint="#000000"
                             android:contentDescription="button"
-                            android:src="@mipmap/ic_tiger_foreground"
-                            tools:ignore="SpeakableTextPresentCheck" />
+                            android:scaleType="fitXY"
+                            android:src="@drawable/wm" />
 
                         <TextView
                             android:id="@+id/warrior3exp"
@@ -506,12 +507,12 @@
 
                         <ImageButton
                             android:id="@+id/warrior5button"
-                            android:layout_width="110dp"
-                            android:layout_height="110dp"
-                            android:backgroundTint="#FFFFFF"
+                            android:layout_width="128dp"
+                            android:layout_height="190dp"
+                            android:backgroundTint="#000000"
                             android:contentDescription="button"
-                            android:src="@mipmap/ic_tiger_foreground"
-                            tools:ignore="SpeakableTextPresentCheck" />
+                            android:scaleType="fitXY"
+                            android:src="@drawable/wk" />
 
                         <TextView
                             android:id="@+id/warrior5exp"
