--- a/app/src/main/res/layout/manual_player_link.xml
+++ b/app/src/main/res/layout/manual_player_link.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background_green_light"
     android:gravity="center|top"
@@ -10,33 +10,30 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:background="@color/background_green_medium"
         android:padding="5dp"
         android:text="Find Player"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
-        tools:ignore="TextContrastCheck"
-        android:layout_weight="1"/>
+        tools:ignore="TextContrastCheck"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Ticket"
-        android:textSize="24dp"
-        android:layout_weight="1"/>
+        android:textSize="24dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@color/white"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="5dp"
-        android:layout_weight="2">
+        android:padding="5dp">
 
 
         <LinearLayout
@@ -169,40 +166,36 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Matches"
-        android:textSize="24dp"
-        android:layout_weight="1"/>
+        android:textSize="24dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mpl_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        android:layout_margin="10dp" />
+        android:layout_height="300dp"
+        android:layout_margin="10dp"/>
 
     <TextView
         android:id="@+id/mpl_noEntriesText"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:text="No matching players found"
         android:textAlignment="center"
         android:textSize="18sp"
-        android:visibility="gone"
-        android:layout_weight="1"/>
+        android:visibility="gone"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1">
+        android:layout_marginBottom="10dp">
 
         <Button
             android:id="@+id/mpl_cancelButton"
