--- a/app/src/main/res/layout/manual_player_listitem.xml
+++ b/app/src/main/res/layout/manual_player_listitem.xml
@@ -1,139 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="5dp"
-    android:layout_marginBottom="10dp"
-    android:descendantFocusability="blocksDescendants">
+    android:descendantFocusability="blocksDescendants"
+    android:padding="5dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/player_first_name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:text="First Name"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/player_last_name"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/player_first_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="First Name"
-            android:textSize="20sp"
-            />
-
-        <TextView
-            android:id="@+id/player_last_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Last Name"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/player_age"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Age"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/player_last_name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:text="Last Name"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/player_age"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/player_first_name"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+    <TextView
+        android:id="@+id/player_age"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Age"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/player_last_name"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Booker Names"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/textView_names"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Booker Names"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/booker_phones"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/player_first_name" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Booker Phone"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/booker_names"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Booker Names"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/booker_phones"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_names" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Booker Emails"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/textView_phones"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Phones"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/booker_emails"
+        app:layout_constraintStart_toEndOf="@+id/booker_names"
+        app:layout_constraintTop_toBottomOf="@+id/player_last_name" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Booker Addresses"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/booker_phones"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Booker Phones"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/booker_emails"
+        app:layout_constraintStart_toEndOf="@+id/booker_names"
+        app:layout_constraintTop_toBottomOf="@+id/textView_phones" />
 
-        </LinearLayout>
+    <TextView
+        android:id="@+id/textView_emails"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Emails"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/booker_addresses"
+        app:layout_constraintStart_toEndOf="@+id/booker_phones"
+        app:layout_constraintTop_toBottomOf="@+id/player_age" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+    <TextView
+        android:id="@+id/booker_emails"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Booker Emails"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/booker_addresses"
+        app:layout_constraintStart_toEndOf="@+id/booker_phones"
+        app:layout_constraintTop_toBottomOf="@+id/textView_emails" />
 
-            <TextView
-                android:id="@+id/booker_names"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Booker Names"
-                android:textSize="16sp" />
+    <TextView
+        android:id="@+id/textView_addresses"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Addresses"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/booker_emails"
+        app:layout_constraintTop_toBottomOf="@+id/player_age" />
 
-            <TextView
-                android:id="@+id/booker_phones"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Booker Phones"
-                android:textSize="16sp" />
+    <TextView
+        android:id="@+id/booker_addresses"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Booker Addresses"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/booker_emails"
+        app:layout_constraintTop_toBottomOf="@+id/textView_addresses" />
 
-            <TextView
-                android:id="@+id/booker_emails"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Booker Emails"
-                android:textSize="16sp" />
+    <Button
+        android:id="@+id/mlpli_moreButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="More"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/booker_addresses" />
 
-            <TextView
-                android:id="@+id/booker_addresses"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Booker Addresses"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/mlpli_moreButton"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:text="More"
-            android:visibility="gone" />
-    </LinearLayout>
-
-</LinearLayout>
-
+</androidx.constraintlayout.widget.ConstraintLayout>
