--- a/app/src/main/res/layout/ticket_info.xml
+++ b/app/src/main/res/layout/ticket_info.xml
@@ -110,7 +110,7 @@
         android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_weight="1"
@@ -134,7 +134,7 @@
             android:textSize="16sp" />
     </LinearLayout>
         <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_weight="1"
@@ -157,6 +157,16 @@
             android:textColor="#000000"
             android:textSize="16sp" />
     </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <Button
+                android:id="@+id/ti_rematchButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Matcha om"/>
+        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/guardianInfo"
