--- a/app/src/main/res/layout/fragment_event_view.xml
+++ b/app/src/main/res/layout/fragment_event_view.xml
@@ -87,6 +87,16 @@
             android:textColor="#000000"
             app:strokeColor="#000000"
             app:strokeWidth="2dp" />
+        <Button
+            android:id="@+id/roll20"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:backgroundTint="#FFFFFF"
+            android:text="Roll 20x"
+            android:textColor="#000000"
+            app:strokeColor="#000000"
+            app:strokeWidth="2dp" />
     </LinearLayout>
 
         <LinearLayout
