--- a/app/src/main/res/layout/note_popup.xml
+++ b/app/src/main/res/layout/note_popup.xml
@@ -25,11 +25,28 @@
         android:text="Message"
         android:textAlignment="center" />
 
-    <Button
-        android:id="@+id/notePopupAcceptButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ok"
-        android:layout_margin="5dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/noteAButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:text="Ok" />
+
+        <Button
+            android:id="@+id/noteBButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:text="Ok"
+            android:visibility="gone" />
+    </LinearLayout>
 
 </LinearLayout>
