--- a/app/src/main/res/navigation/navigation_hub.xml
+++ b/app/src/main/res/navigation/navigation_hub.xml
@@ -43,6 +43,9 @@
         <argument
             android:name="passedEventId"
             app:argType="string" />
+        <argument
+            android:name="passedTicketId"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/eventAdminFrag"
