--- a/app/src/main/res/layout/award_exp.xml
+++ b/app/src/main/res/layout/award_exp.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:background="@color/background_green_medium"
-        android:text="Award EXP"
+        android:text="Award XP"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textStyle="bold" />
@@ -28,6 +28,16 @@
         android:text="Player Name"
         android:textAlignment="center"
         android:textSize="18sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="Extra XP this event"
+        android:textAlignment="center"
+        android:textSize="14sp" />
 
     <EditText
         android:id="@+id/ae_expAmount"
