--- a/app/src/main/res/layout/checkin_listitem.xml
+++ b/app/src/main/res/layout/checkin_listitem.xml
@@ -38,9 +38,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:layout_weight="5"
+            android:layout_weight="3"
             android:text="Group" />
-
         <Button
             android:id="@+id/checkin_infoButton"
             android:layout_width="0dp"
@@ -58,6 +57,7 @@
             app:strokeColor="#000000"
             app:strokeWidth="2dp" />
 
+
         <Button
             android:id="@+id/checkin_teamButton"
             android:layout_width="0dp"
@@ -65,6 +65,15 @@
             android:layout_marginRight="5dp"
             android:layout_weight="3"
             android:text="Team" />
+
+
+        <Button
+            android:id="@+id/checkin_unteamButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="3.5"
+            android:text="Un-Team" />
 
         <Button
             android:id="@+id/checkin_checkinButton"
