--- a/app/src/main/res/layout/fragment_level_up.xml
+++ b/app/src/main/res/layout/fragment_level_up.xml
@@ -77,7 +77,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="#FFFFFF"
                 android:contentDescription="button"
-                android:text="Apply"
+                android:text="Award XP"
                 android:textColor="#000000"
                 app:strokeColor="#000000"
                 app:strokeWidth="2dp" />
