Ge ut avhoppares roll, Bugfixes
Avhoppare: Ge någon annan rollen
Bottom Panel bug fixed?
New Round button bug fixed?
Winner bug fixed?

--- a/app/src/main/res/layout/fragment_event_view.xml
+++ b/app/src/main/res/layout/fragment_event_view.xml
@@ -937,6 +937,7 @@
                 android:visibility="visible"
                 app:strokeColor="#000000"
                 app:strokeWidth="2dp"
+                android:enabled="false"
                 />
 
         </LinearLayout>
