--- a/app/src/main/res/layout/loading_popup.xml
+++ b/app/src/main/res/layout/loading_popup.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#52000000"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -10,17 +9,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#FFFFFF">
 
         <TextView
             android:id="@+id/textView12"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#FFFFFF"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="10dp"
             android:text="Loading\nPlease wait..."
             android:textAlignment="center"
             android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/loading_cancelButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:layout_marginHorizontal="10dp"/>
     </LinearLayout>
 </LinearLayout>
